--- a/bean.css
+++ b/bean.css
@@ -3,6 +3,8 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
+    background-color: #510000;
+    text-shadow: 1px 1px 2px black;
   }
 
   p, h1, h2, h3 {color:white;}
@@ -26,8 +28,11 @@ body {
     text-align: center;
     color:white;
     font-size: 100px;
-    -webkit-text-stroke-width: 5px;
+    -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
     text-transform: uppercase;
     font-weight: bolder;
+    font-family: Impact, sans-serif;
   }
+
+  
