--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 
 .agilephd {
-    font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
     font-size: 1.5rem;
   }
 
@@ -25,6 +25,8 @@
     color:              #FFF;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
+    font-family: 'Impact', sans-serif;
+    text-transform: uppercase;
   /*  opacity:            1;*/
   }
   
@@ -62,8 +64,15 @@
   }
 
   #epicgifs {
-    font-family: 'Playpen Sans', sans-serif;
-    text-shadow: 1px 1px 2px black;
+    font-family: 'Black Ops One', sans-serif;
+    font-size: 65px;
+    text-shadow: 3px 3px 20px black;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   .epicgifs {
@@ -75,4 +84,52 @@
     width: 1024px;
     height: 550px;
   }
-  
+
+  #linx:hover {
+    border-color: gold;
+  }
+
+  #deleteme {
+    border-color: rgb(12,7,5);
+  }
+
+  #containerofsorts {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+  }
+
+  .firegif {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 135px;
+    display: block;
+  }
+
+  @media only screen and (max-width: 600px) {
+    #epicgifs {
+      font-size: 32px;
+      width: 400px;
+      -webkit-text-stroke-width: 2px;
+      -webkit-text-stroke-color: black;}
+    ul.menu {
+      background-color: #330000;}
+    #gridcontainer {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-row: 1 / 4;
+      justify-content: center;
+    }
+    .epicgifs {
+      width: 400px;
+      height: 133px;
+    }
+    .epicgifs2 {
+      width: 400px;
+      height: 183px;
+    }
+  }
